support transpilation of the type contained in the referenced assemblies

--- a/src/TypedSignalR.Client.TypeScript.Generator/Properties/launchSettings.json
+++ b/src/TypedSignalR.Client.TypeScript.Generator/Properties/launchSettings.json
@@ -15,6 +15,10 @@
         "Test": {
             "commandName": "Project",
             "commandLineArgs": "--project ..\\..\\..\\..\\..\\tests\\TypedSignalR.Client.TypeScript.Tests.Shared\\TypedSignalR.Client.TypeScript.Tests.Shared.csproj --output ..\\..\\..\\..\\..\\tests\\TypeScriptTests\\src\\generated"
+        },
+        "RefAsm": {
+            "commandName": "Project",
+            "commandLineArgs": "--project ..\\..\\..\\..\\..\\tests\\TypedSignalR.Client.TypeScript.Tests.Server\\TypedSignalR.Client.TypeScript.Tests.Server.csproj --output ..\\..\\..\\..\\..\\tests\\TypeScriptTests\\src\\generated2 -asm true"
         }
     }
 }
