--- a/src/TypedSignalR.Client.TypeScript/TypedSignalR.Client.TypeScript.csproj
+++ b/src/TypedSignalR.Client.TypeScript/TypedSignalR.Client.TypeScript.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -20,7 +20,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
-        <PackageReference Include="Tapper" Version="1.5.0" />
+        <PackageReference Include="Tapper" Version="1.5.1" />
     </ItemGroup>
 
     <ItemGroup>
