--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,19 +21,19 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: Get version from git tag
-        run: echo "RELEASE_VER=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
       - name: dotnet pack TypedSignalR.Client.TypeScript
-        run: dotnet pack -c Release --output ${{ github.workspace }}/artifacts -p:Version=${{ env.RELEASE_VER }} ./src/TypedSignalR.Client.TypeScript/TypedSignalR.Client.TypeScript.csproj
+        run: dotnet pack -c Release --output ${{ github.workspace }}/artifacts -p:Version=${{ env.RELEASE_VERSION }} ./src/TypedSignalR.Client.TypeScript/TypedSignalR.Client.TypeScript.csproj
 
       - name: dotnet pack TypedSignalR.Client.TypeScript.Analyzer
-        run: dotnet pack -c Release --output ${{ github.workspace }}/artifacts -p:Version=${{ env.RELEASE_VER }} ./src/TypedSignalR.Client.TypeScript.Analyzer/TypedSignalR.Client.TypeScript.Analyzer.csproj
+        run: dotnet pack -c Release --output ${{ github.workspace }}/artifacts -p:Version=${{ env.RELEASE_VERSION }} ./src/TypedSignalR.Client.TypeScript.Analyzer/TypedSignalR.Client.TypeScript.Analyzer.csproj
 
       - name: dotnet pack TypedSignalR.Client.TypeScript.Attributes
-        run: dotnet pack -c Release --output ${{ github.workspace }}/artifacts -p:Version=${{ env.RELEASE_VER }} ./src/TypedSignalR.Client.TypeScript.Attributes/TypedSignalR.Client.TypeScript.Attributes.csproj
+        run: dotnet pack -c Release --output ${{ github.workspace }}/artifacts -p:Version=${{ env.RELEASE_VERSION }} ./src/TypedSignalR.Client.TypeScript.Attributes/TypedSignalR.Client.TypeScript.Attributes.csproj
 
       - name: dotnet pack TypedSignalR.Client.TypeScript.Generator
-        run: dotnet pack -c Release --output ${{ github.workspace }}/artifacts -p:Version=${{ env.RELEASE_VER }} ./src/TypedSignalR.Client.TypeScript.Generator/TypedSignalR.Client.TypeScript.Generator.csproj
+        run: dotnet pack -c Release --output ${{ github.workspace }}/artifacts -p:Version=${{ env.RELEASE_VERSION }} ./src/TypedSignalR.Client.TypeScript.Generator/TypedSignalR.Client.TypeScript.Generator.csproj
 
       - uses: actions/upload-artifact@v3
         with:
