--- a/src/TypedSignalR.Client.TypeScript.Attributes/TypedSignalR.Client.TypeScript.Attributes.csproj
+++ b/src/TypedSignalR.Client.TypeScript.Attributes/TypedSignalR.Client.TypeScript.Attributes.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
@@ -21,6 +21,7 @@
 
     <ItemGroup>
         <PackageReference Include="Tapper.Attributes" Version="1.5.1" />
+        <PackageReference Include="TypedSignalR.Client.Attributes" Version="0.0.4" />
     </ItemGroup>
 
 </Project>
