--- a/tests/TypedSignalR.Client.TypeScript.Tests.Shared/TypedSignalR.Client.TypeScript.Tests.Shared.csproj
+++ b/tests/TypedSignalR.Client.TypeScript.Tests.Shared/TypedSignalR.Client.TypeScript.Tests.Shared.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\TypedSignalR.Client.TypeScript.Analyzer\TypedSignalR.Client.TypeScript.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    <!--<ProjectReference Include="..\..\src\TypedSignalR.Client.TypeScript.Analyzer\TypedSignalR.Client.TypeScript.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
     <ProjectReference Include="..\..\src\TypedSignalR.Client.TypeScript.Attributes\TypedSignalR.Client.TypeScript.Attributes.csproj" />
   </ItemGroup>
 
