--- a/src/TypedSignalR.Client.TypeScript.Analyzer/TypedSignalR.Client.TypeScript.Analyzer.csproj
+++ b/src/TypedSignalR.Client.TypeScript.Analyzer/TypedSignalR.Client.TypeScript.Analyzer.csproj
@@ -36,6 +36,8 @@
 
     <ItemGroup>
         <Compile Include="..\TypedSignalR.Client.TypeScript\RoslynExtensions.cs" LinkBase="" />
+        <Compile Include="..\TypedSignalR.Client.TypeScript\SpecialSymbols.cs" LinkBase="" />
+        <Compile Include="..\TypedSignalR.Client.TypeScript\Utils.cs" LinkBase="" />
     </ItemGroup>
 
 </Project>
