--- a/src/TypedSignalR.Client.TypeScript/TypedSignalR.Client.TypeScript.csproj
+++ b/src/TypedSignalR.Client.TypeScript/TypedSignalR.Client.TypeScript.csproj
@@ -20,7 +20,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
-        <PackageReference Include="Tapper" Version="1.8.0-rc1" />
+        <PackageReference Include="Tapper" Version="1.8.0" />
     </ItemGroup>
 
     <ItemGroup>
