--- a/samples/SampleServer/Properties/launchSettings.json
+++ b/samples/SampleServer/Properties/launchSettings.json
@@ -13,7 +13,7 @@
             "commandName": "Project",
             "dotnetRunMessages": true,
             "launchBrowser": true,
-            "launchUrl": "api/echo/echo?param=TypedSignalR.Client.TypeScript",
+            "launchUrl": "signalr-dev",
             "applicationUrl": "http://localhost:5000",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
