--- a/samples/SampleServer/SampleServer.csproj
+++ b/samples/SampleServer/SampleServer.csproj
@@ -6,6 +6,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="TypedSignalR.Client.DevTools" Version="1.1.2" />
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="..\App.Interfaces\App.Interfaces.csproj" />
     </ItemGroup>
 
